# ecosystem-demo

./: Cargo.toml  README.md  cliff.toml  deny.toml  test.rest
examples/: chat.rs  shortener.rs
